[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/fullscreen.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="GameTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -296.0
margin_right = 375.0
margin_bottom = -183.0
custom_fonts/font = SubResource( 1 )
text = "PING BLAST"

[node name="AuthorLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -57.0
custom_fonts/font = SubResource( 2 )
text = "2021 - djalexkidd"
align = 1

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -31.5
margin_right = 101.0
margin_bottom = 31.5
custom_fonts/font = SubResource( 3 )
text = "JOUER"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = 96.5
margin_right = 139.0
margin_bottom = 159.5
custom_fonts/font = SubResource( 3 )
text = "QUITTER"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
